--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Virtual Valtteri</string>
+    <string-array name="speakers">
+        <item>Basic team radio</item>
+        <item>Just numbers</item>
+    </string-array>
 </resources>
