--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,14 @@
     <string name="speaker_summary">Different speakers say different things, using more or less words.</string>
     <string name="speaker_title">Speaker</string>
     <string name="key_speaker">speaker_key</string>
+
+    <string name="drivers_title">Follow drivers(s)</string>
+    <string name="drivers_key">drivers_key</string>
+    <string-array name="drivers_initial_entries">
+        <item>You can select driver(s) here once the race has started.</item>
+    </string-array>
+    <string-array name="drivers_initial_values">
+        <item>default</item>
+    </string-array>
+
 </resources>
