Finally got the new Preference* widgets to work.
The idea is to populate one MultiSelect with the current drivers and cars,
and then maintain a second one where I dynamically put all drivers
you have once selected. But it was surprisingly difficult to
figure out basic stuff in Andriod. For examle, the just creating a class and
hoding a reference to it wouldn't work, because theembedded OS/Framework
manages each thread, and the instance I think I'm about to use,
may not exist anymore, or have been put to sleep, etc.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,13 +19,24 @@
     <string name="speaker_title">Speaker</string>
     <string name="key_speaker">speaker_key</string>
 
-    <string name="drivers_title">Select driver(s) from current race</string>
+    <string name="drivers_title">Select driver(s) from current session</string>
     <string name="drivers_key">drivers_key</string>
     <string-array name="drivers_initial_entries">
-        <item>You can select driver(s) here once the race has started.</item>
+        <item>You can select driver(s) here once the session has started.</item>
     </string-array>
     <string-array name="drivers_initial_values">
         <item>default</item>
     </string-array>
+
+    <string name="favorited_drivers_title">Remember these drivers and follow them next time.</string>
+    <string-array name="favorited_drivers_initial_entries">
+        <item>You have not followed any drivers yet</item>
+    </string-array>
+    <string-array name="favorited_drivers_initial_values">
+        <item>default</item>
+    </string-array>
+
+    <string name="carNrDefault">24</string>
+    <string name="positionDefault">P0</string>
     <string name="largeTextDefault">0:00.0</string>
 </resources>
