--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="carNrDefault">00</string>
     <string name="positionDefault">P0</string>
     <string name="largeTextDefault">00.0</string>
+    <string name="initialHint">Select which driver to follow here 👇</string>
 </resources>
