Add option to close the app and service
Once again thanks android for providing 5 different ways to finish()
and exit an app... what a waste of time this was.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,8 @@
         <item>off</item>
         <item>race</item>
     </string-array>
+    <string-array name="system_close_key_choices">
+        <item>On</item>
+        <item>Close</item>
+    </string-array>
 </resources>
